Apply dark mode toggle switch, fix layout of cards and navbar [backend not working]

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
  /* Light gray - #282828 */
  /* Yello - #fffd01 */
  /* White - #fafafa */
- * {
+ /* * {
   font-family: 'Public Sans', sans-serif !important;
- }
-
+ } */
 
 a {
   text-decoration: none;
